# zkevm-circuits

./: Cargo.toml
eth-types/: Cargo.toml
eth-types/src/: lib.rs
field-exts/: Cargo.toml
field-exts/src/: lib.rs
gadgets/: Cargo.toml
gadgets/src/: batched_is_zero.rs  binary_number.rs  is_zero.rs  less_than.rs  lib.rs  mul_add.rs  permutation.rs  util.rs
