[package]
name = "gadgets"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]
license = "MIT OR Apache-2.0"

[dependencies]
halo2_proofs = { git = "https://github.com/zkmove/halo2.git", branch = "zkmove", default-features = false, features = ["batch", "bits"] }
sha3 = "0.7.2"
field-exts = { path = "../field-exts" }
digest = "0.7.6"
strum = "0.24"
itertools = "0.10"
primitive-types = "0.12"
[dev-dependencies]
rand = "0.8"
halo2_proofs = { git = "https://github.com/zkmove/halo2.git", branch = "zkmove", default-features = false, features = ["batch", "bits", "circuit-params"] }